--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <TITLE>
 GNU which
 </TITLE>
+<META HTTP-EQUIV=REFRESH CONTENT="2;URL=http://www.xs4all.nl/~carlo17/which/">
 </HEAD>
 <HTML>
-<BODY>
+<BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#1F00FF" ALINK="#FF0000" VLINK="#9900DD">
+<H3>GNU which</H3>
 <P>This project didn't make a html page yet.
 Please look at <A HREF="http://www.xs4all.nl/~carlo17/which/">http://www.xs4all.nl/~carlo17/which/</A> for documentation.
 </P>
+<P>(You will be automatically taken there in 2 seconds.)</P>
 </BODY>
 </HTML>
 
