--- a/index.html
+++ b/index.html
@@ -1,16 +1,2 @@
-<HEAD>
-<TITLE>
-GNU which
-</TITLE>
-<META HTTP-EQUIV=REFRESH CONTENT="5;URL=http://www.xs4all.nl/~carlo17/which/">
-</HEAD>
-<HTML>
-<BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#1F00FF" ALINK="#FF0000" VLINK="#9900DD">
-<H3>GNU which</H3>
-<P>This project didn't make a html page yet.
-Please look at <A HREF="http://www.xs4all.nl/~carlo17/which/">http://www.xs4all.nl/~carlo17/which/</A> for documentation.
-</P>
-<P>(You will be automatically taken there in 5 seconds.)</P>
-</BODY>
-</HTML>
-
+<meta http-equiv="refresh" content="0;
+      url=https://savannah.gnu.org/projects/which/">
