Redirect to http://carlowood.github.io/which/index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="refresh" content="0;
-      url=https://savannah.gnu.org/projects/which/">
+      url=http://carlowood.github.io/which/index.html">
